--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
---extra-index-url https://download.pytorch.org/whl/cu118
+--extra-index-url https://download.pytorch.org/whl/cu121
 
 numpy==1.26.2
 gradio==3.44.2
@@ -6,13 +6,9 @@ opencv-python==4.8.1.78
 onnx==1.15.0
 insightface==0.7.3
 psutil==5.9.6
-torch==2.1.2+cu118; sys_platform != 'darwin'
-torch==2.1.2; sys_platform == 'darwin'
-torchvision==0.16.2+cu118; sys_platform != 'darwin'
-torchvision==0.16.2; sys_platform == 'darwin'
-onnxruntime==1.16.3; sys_platform == 'darwin' and platform_machine != 'arm64'
-onnxruntime-silicon==1.13.1; sys_platform == 'darwin' and platform_machine == 'arm64'
-onnxruntime-gpu==1.16.3; sys_platform != 'darwin'
+torch==2.1.2+cu121
+torchvision==0.16.2+cu121
+onnxruntime-gpu==1.16.3
 tqdm==4.66.1
 ftfy
 regex
